--- a/WebContent/resources/css/estilos.css
+++ b/WebContent/resources/css/estilos.css
@@ -34,7 +34,7 @@ header{
 
 #datos {
   	float: left;
-  	width: 1070px;
+  	width: 1000px;
   	margin-left: 50px;
     font-family: Arial, sans-serif;
     font-size: 14px;
@@ -42,10 +42,9 @@ header{
 
 #Hdatos {
   	float: left;
-  	width: 570px;
+  	margin-top: 30px;
     font-family: Arial, sans-serif;
     font-size: 16px;
-    margin-left: -20px;
     height: 200px;
 }
 
