--- a/WebContent/templates/_main.xhtml
+++ b/WebContent/templates/_main.xhtml
@@ -30,9 +30,10 @@
 <h:body styleClass="inner">
 	<header class="inner">
 		<div id="escudoUnicauca"></div>
-		<div style="position: absolute; bottom: 0px; right: 10px;">
+		<div style="position: absolute; bottom: 0px; right: 80px;">
 			<h:form >
-				<p:commandButton icon="ui-icon-key" value="Cerrar Sesión" ajax="false" action="#{user.cerrarSesion()}" />
+				<p:commandButton icon="ui-icon-key" value="Cerrar Sesión" 
+								 ajax="false" action="#{prematriculaController.cerrarSesion()}" />
 			</h:form>
 		</div>
 		<div class="clear"></div>
